--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ django-cors-headers==4.3.1
 Django==3.2.19
 djangorestframework==3.15.1
 djongo==1.3.6
+djangorestframework_simplejwt==5.3.1
 dnspython==2.6.1
 gunicorn==22.0.0
 packaging==24.0
